--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -30,6 +30,7 @@
 }
 .title:hover {
   color: white;
+  text-decoration: none;
 }
 
 .submenu {
@@ -45,6 +46,8 @@
 .subitem {
   padding: 1rem;
   transition: background-color .25s, color .25s;
+  color: white;
+  text-decoration: none;
 }
 .subitem:hover {
   background-color: #5a808c;
