--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -65,6 +65,7 @@
 .item-nome {
   display: inline-flex;
   align-items: center;
+  margin-left: 3rem;
 }
 
 .item-curriculo {
@@ -125,6 +126,12 @@
   justify-content: space-evenly;
   display: flex;
   flex-grow: 1;
+}
+
+.footer{
+  margin-top: 2rem;
+}
+
 }
 .body{
 
