--- a/assets/css/projeto.css
+++ b/assets/css/projeto.css
@@ -69,6 +69,7 @@
 .item-nome {
   display: inline-flex;
   align-items: center;
+  margin-left: 3rem;
 }
 
 .item-curriculo {
@@ -130,6 +131,9 @@
   display: flex;
   flex-grow: 1;
 }
+.footer{
+  margin-top: 6.4rem;
+}
 
 
 
@@ -158,6 +162,7 @@
 .link_line {
   flex-direction: row;
   text-decoration: none;
+
 }
 
 .link_line:hover {
@@ -177,6 +182,7 @@
   font-weight: bold;
   font-size: 1.5rem;
   color: #405a63;
+  
 }
 
 .item0 {
@@ -191,6 +197,7 @@
 
 .item2 {
   background: #eaeae1;
+  
 }
 
 .container-pai{
