--- a/assets/css/categoria_.css
+++ b/assets/css/categoria_.css
@@ -118,7 +118,7 @@
 .menu-image {
   height: 2rem;
 }
-
+/*footer*/
 .footer, .text-footer {
   padding: .5rem;
   color: white;
@@ -176,7 +176,7 @@
   }
 }
 
-
+/*categoria*/
   .categoria {
     display: flex;
     align-items: center;
@@ -226,7 +226,7 @@
 
   .quadrado1{
     display: flex;
-    align-items: center;
+    /*align-items: center;*/
     justify-content: space-between;
     margin-left: 1rem;
     margin-right: 1rem;
@@ -254,11 +254,13 @@
     text-align: center;
     font-family: 'EB Garamond', serif;
     margin-right: 0.7rem;
+    margin-top: 1rem;
+
 
   }
   .quadrado2{
     display: flex;
-    align-items: center;
+    /*align-items: center;*/
     justify-content: space-between;
     margin-left: 1rem;
     margin-right: 1rem;
@@ -288,6 +290,7 @@
     text-align: center;
     font-family: 'EB Garamond', serif;
     margin-right: 0.7rem;
+    margin-top: 1rem;
 
   }
 
@@ -341,13 +344,14 @@
 
   .quadrado1{
     display: flex;
-    align-items: center;
+    /*align-items: center;*/
     justify-content: space-between;
     margin: 1.8rem;
     border-style: solid;
     border-width: 0.1rem;
     border-color: #405a63;
     border-radius: 0.5rem;
+
   }
 
   .linkquadrado1{
@@ -368,11 +372,12 @@
     margin-right: 0.5rem;
     text-align: center;
     font-family: 'EB Garamond', serif;
+    margin-top: 1rem;
 
   }
   .quadrado2{
     display: flex;
-    align-items: center;
+    /*align-items: center;*/
     justify-content: space-between;
     margin: 1.8rem;
     list-style: none;
@@ -380,6 +385,7 @@
     border-width: 0.1rem;
     border-color: #405a63;
     border-radius: 0.5rem;
+
   }
 
   .linkquadrado2{
@@ -403,6 +409,7 @@
     margin-top: 0.5rem;
     text-align: center;
     font-family: 'EB Garamond', serif;
+    margin-top: 1rem;
   }
 
    .links{
