--- a/assets/css/categoria_.css
+++ b/assets/css/categoria_.css
@@ -219,6 +219,8 @@
     align-items: center;
     list-style: none;
     margin-bottom: 7rem;
+ /*   margin-left: 15rem;
+    margin-right: 15rem;*/
 
 
     
@@ -228,7 +230,7 @@
     display: flex;
     /*align-items: center;*/
     justify-content: space-between;
-    margin-left: 1rem;
+    margin-left: 10rem;
     margin-right: 1rem;
     border-style: solid;
     border-width: 0.1rem;
@@ -241,6 +243,7 @@
    font-family: 'Montserrat', sans-serif;
    color: #405a63;
    text-decoration: none;
+   margin-bottom: 1rem;
 
    }
 
@@ -251,7 +254,7 @@
   }
 
   .quadrado1-text{
-    text-align: center;
+    /*text-align: center;*/
     font-family: 'EB Garamond', serif;
     margin-right: 0.7rem;
     margin-top: 1rem;
@@ -263,7 +266,7 @@
     /*align-items: center;*/
     justify-content: space-between;
     margin-left: 1rem;
-    margin-right: 1rem;
+    margin-right: 10rem;
     list-style: none;
     border-style: solid;
     border-width: 0.1rem;
@@ -276,6 +279,7 @@
     font-family: 'Montserrat', sans-serif;
     color: #405a63;
     text-decoration: none;
+    margin-bottom: 1rem;
 
   }
 
@@ -287,7 +291,7 @@
   }
 
   .quadrado2-text{
-    text-align: center;
+    /*text-align: center;*/
     font-family: 'EB Garamond', serif;
     margin-right: 0.7rem;
     margin-top: 1rem;
@@ -359,6 +363,7 @@
    font-family: 'Montserrat', sans-serif;
    color: #405a63;
    text-decoration: none;
+   margin-bottom: 1rem;
 
    }
 
@@ -370,7 +375,7 @@
 
   .quadrado1-text{
     margin-right: 0.5rem;
-    text-align: center;
+    /*text-align: center;*/
     font-family: 'EB Garamond', serif;
     margin-top: 1rem;
 
@@ -393,6 +398,7 @@
     font-family: 'Montserrat', sans-serif;
     color: #405a63;
     text-decoration: none;
+    margin-bottom: 1rem;
 
   }
 
@@ -406,8 +412,8 @@
   .quadrado2-text{
     margin-right: 0.5rem;
     margin-bottom: 0.5rem;
-    margin-top: 0.5rem;
-    text-align: center;
+    /*margin-top: 0.5rem;*/
+    /*text-align: center;*/
     font-family: 'EB Garamond', serif;
     margin-top: 1rem;
   }
