--- a/assets/css/categoria_.css
+++ b/assets/css/categoria_.css
@@ -197,6 +197,8 @@
     margin-left: 1rem;
     margin-right: 1rem;
     margin-top: 1rem;
+    width: 20rem;
+    height: 15rem;
   }
 
   .text {
@@ -219,13 +221,14 @@
    }
 
   .quadrado{
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 5rem;
+    grid-row-gap: 3rem;
     align-items: center;
     list-style: none;
     margin-bottom: 7rem;
- /*   margin-left: 15rem;
-    margin-right: 15rem;*/
+    margin-top: 4rem;
 
 
     
@@ -233,10 +236,7 @@
 
   .quadrado1{
     display: flex;
-    /*align-items: center;*/
-    justify-content: space-between;
-    margin-left: 10rem;
-    margin-right: 1rem;
+    justify-content: center;
     border-style: solid;
     border-width: 0.1rem;
     border-color: #405a63;
@@ -256,57 +256,22 @@
     margin: 1em;
     border: 0.5rem;
     border-radius: 0.5rem;
+    width: 20rem;
+    height: 10rem;
   }
 
   .quadrado1-text{
-    /*text-align: center;*/
-    font-family: 'EB Garamond', serif;
-    margin-right: 0.7rem;
-    margin-top: 1rem;
-
-
-  }
-  .quadrado2{
-    display: flex;
-    /*align-items: center;*/
-    justify-content: space-between;
-    margin-left: 1rem;
-    margin-right: 10rem;
-    list-style: none;
-    border-style: solid;
-    border-width: 0.1rem;
-    border-color: #405a63;
-    border-radius: 0.5rem;
-  }
-
-  .linkquadrado2{
-
-    font-family: 'Montserrat', sans-serif;
-    color: #405a63;
-    text-decoration: none;
-    margin-bottom: 1rem;
-
-  }
-
-  .quadrado2-image{
-    margin: 1em;
-    border: 0.5rem;
-    border-radius: 0.5rem;
-
-  }
-
-  .quadrado2-text{
-    /*text-align: center;*/
     font-family: 'EB Garamond', serif;
     margin-right: 0.7rem;
     margin-top: 1rem;
 
   }
 
-.links{
 
- color: #405a63;
- text-decoration: none;
+  .links{
+
+   color: #405a63;
+   text-decoration: none;
 }
 
   @media (max-width: 414px) {
@@ -344,10 +309,13 @@
    }
 
   .quadrado{
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-row-gap: 1rem;
     justify-content: space-between;
     list-style: none;
     flex-direction: column;
+
 
   }
 
@@ -376,51 +344,17 @@
     margin: 0.5rem;
     border: 0.5rem;
     border-radius: 0.5rem;
+    width: 8rem;
+    height: 8rem;
+
   }
 
   .quadrado1-text{
     margin-right: 0.5rem;
-    /*text-align: center;*/
     font-family: 'EB Garamond', serif;
     margin-top: 1rem;
+    max-width: 10rem;
 
-  }
-  .quadrado2{
-    display: flex;
-    /*align-items: center;*/
-    justify-content: space-between;
-    margin: 1.8rem;
-    list-style: none;
-    border-style: solid;
-    border-width: 0.1rem;
-    border-color: #405a63;
-    border-radius: 0.5rem;
-
-  }
-
-  .linkquadrado2{
-
-    font-family: 'Montserrat', sans-serif;
-    color: #405a63;
-    text-decoration: none;
-    margin-bottom: 1rem;
-
-  }
-
-  .quadrado2-image{
-    margin: 0.5rem;
-    border: 0.5rem;
-    border-radius: 0.5rem;
-
-  }
-
-  .quadrado2-text{
-    margin-right: 0.5rem;
-    margin-bottom: 0.5rem;
-    /*margin-top: 0.5rem;*/
-    /*text-align: center;*/
-    font-family: 'EB Garamond', serif;
-    margin-top: 1rem;
   }
 
    .links{
