--- a/assets/css/categoria_.css
+++ b/assets/css/categoria_.css
@@ -229,6 +229,8 @@
     list-style: none;
     margin-bottom: 7rem;
     margin-top: 4rem;
+    margin-right: 3rem;
+    margin-left: 3rem;
 
 
     
@@ -256,7 +258,7 @@
     margin: 1em;
     border: 0.5rem;
     border-radius: 0.5rem;
-    width: 20rem;
+    width: 25rem;
     height: 10rem;
   }
 
